cluster/apps/networking/traefik/forward-auth/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
  labels:
    app.kubernetes.io/instance: traefik-forward-auth
    app.kubernetes.io/name: traefik-forward-auth
spec:
  ingressClassName: "traefik"
  rules:
    - host: "auth.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-forward-auth
                port:
                  name: http
  tls:
    - hosts:
        - "auth.${SECRET_DOMAIN}"
      secretName: "auth-${SECRET_DOMAIN/./-}-tls"
